# study-geopandas

./: .gitignore  README.md  pyproject.toml
data/: fail - fail.csv  fail.csv  대구광역시_시내버스 정류소 위치정보_20230731.csv  대구광역시_시내버스 정류소 위치정보_20230731.gpkg  대구광역시_전기차 충전기 구축 현황_20230531.csv  대구광역시_전기차 충전기 구축 현황_20230531.gpkg  대구시_법정동_5179.gpkg  대구시_법정동_5179.gpsk  대구시_시군구_5179.gpkg  대구시_시군구_5179.gpsk
data/LARD_ADM_SECT_SGG_대구_02/: LARD_ADM_SECT_SGG_27.shp  LARD_ADM_SECT_SGG_27.shx
data/LSMD_ADM_SECT_UMD_대구/: LSMD_ADM_SECT_UMD_27_202309.dbf  LSMD_ADM_SECT_UMD_27_202309.shp  LSMD_ADM_SECT_UMD_27_202309.shx
src/: check_lib.ipynb  hangle_font.py
