[tool.poetry]
name = "[tutorial]-geopandas"
version = "0.1.0"
description = ""
authors = ["KJS-KR <vcfdregg3@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
geopandas = "^0.14.0"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
mapclassify = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
